--- a/test/px-vis-boxplot-fixture.html
+++ b/test/px-vis-boxplot-fixture.html
@@ -15,7 +15,7 @@
 
     <test-fixture id="px-vis-boxplot-fixture">
       <template>
-        <px-vis-boxplot>
+        <px-vis-boxplot width="400" height="400">
         </px-vis-boxplot>
       </template>
     </test-fixture>
