--- a/test/px-vis-boxplot-fixture.html
+++ b/test/px-vis-boxplot-fixture.html
@@ -22,8 +22,9 @@
 
     <script src="px-vis-boxplot-tests.js"></script>
     <script src="basic-input-values.js"></script>
-    <script src="orientation.js"></script>
+    <script src="thresholds.js"></script>
     <script src="box-whisker-config-test.js"></script>
+    <script src="orientation.js"></script>
 
   </body>
 </html>
