--- a/px-vis-boxplot.html
+++ b/px-vis-boxplot.html
@@ -73,8 +73,9 @@
     <!-- box and whisker components -->
     <template is="dom-repeat" items="[[chartData]]" restamp>
       <px-vis-box-whisker
-        data="[[item.data]]"
-        position="[[item.position]]"
+        series-key="[[_getBoxWhiskerSeriesKey(item)]]"
+        data="[[_getBoxWhiskerData(item)]]"
+        position="[[_getBoxWhiskerPosition(item)]]"
         orientation="[[orientation]]"
         svg="[[layer.1]]"
         x="[[x]]"
@@ -146,15 +147,29 @@
          *
          * ```
          * [{
-         *   position: 1,
-         *   data: {
-         *     max: 90,
-         *     q3: 70,
-         *     mean: 50,
-         *     median: 50,
-         *     q1: 30,
-         *     min: 10,
-         *     outliers: [5, 2]
+         *   series1: {
+         *     position: 1,
+         *     data: {
+         *       max: 90,
+         *       q3: 70,
+         *       mean: 50,
+         *       median: 50,
+         *       q1: 30,
+         *       min: 10,
+         *       outliers: [5, 2]
+         *     }
+         *   },
+         *   series2: {
+         *     position: 1,
+         *     data: {
+         *       max: 90,
+         *       q3: 70,
+         *       mean: 50,
+         *       median: 50,
+         *       q1: 30,
+         *       min: 10,
+         *       outliers: [5, 2]
+         *     }
          *   }
          * }]
          * ```
@@ -284,11 +299,11 @@
         const exts = {};
         // set x axis to match the data items
         exts.x = [];
-        chartData.forEach((item) => exts.x.push(item.position));
+        chartData.forEach((item) => exts.x.push(this._getBoxWhiskerPosition(item)));
         exts.y = [Number.MAX_SAFE_INTEGER, Number.MIN_SAFE_INTEGER];
         // to find the min/max y values, we need to check each set of data
         for (const i in chartData) {
-          const data = chartData[i].data;
+          const data = this._getBoxWhiskerData(chartData[i]);
           const outliersMin = Math.min.apply(Math, data.outliers);
           const outliersMax = Math.max.apply(Math, data.outliers);
           // compare current min/max, current series min/max, and the min/max of outliers
@@ -307,8 +322,29 @@
       },
 
       /**
-       * Apply changes to config object to the children components.
+       * Returns name of the series for an object from the
+       * chartData array. Used mainly by template.
        */
+      _getBoxWhiskerSeriesKey: function(item) {
+        return Object.keys(item)[0];
+      },
+
+      /**
+       * Returns box plot data from an object in the
+       * chartData array. Used mainly by template.
+       */
+      _getBoxWhiskerData: function(item) {
+        return item[Object.keys(item)[0]].data;
+      },
+
+      /**
+       * Returns box plot position value from an object in the
+       * chartData array. Used mainly by template.
+       */
+      _getBoxWhiskerPosition: function(item) {
+        return item[Object.keys(item)[0]].position;
+      },
+
       _boxWhiskerConfigChanged: function(conf) {
         if (this.hasUndefinedArguments(arguments)) {
           return;
