--- a/demo/px-vis-boxplot-demo.html
+++ b/demo/px-vis-boxplot-demo.html
@@ -188,11 +188,23 @@
         type: Object,
         inputType: 'code:JSON',
         defaultValue: {
-          'mySeries': {
-            'name': 'My-Series',
+          'series1': {
+            'name': 'Series 1',
+            'x': 'position',
+            'y': 'data',
+            'color': 'red'
+          },
+          'series2': {
+            'name': 'Series 2',
             'x': 'position',
             'y': 'data',
             'color': 'green'
+          },
+          'series3': {
+            'name': 'Series 3',
+            'x': 'position',
+            'y': 'data',
+            'color': 'blue'
           }
         }
       },
