adding light theme

--- a/demo/px-vis-boxplot-demo.html
+++ b/demo/px-vis-boxplot-demo.html
@@ -191,20 +191,17 @@
           'series1': {
             'name': 'Series 1',
             'x': 'position',
-            'y': 'data',
-            'color': 'red'
+            'y': 'data'
           },
           'series2': {
             'name': 'Series 2',
             'x': 'position',
-            'y': 'data',
-            'color': 'green'
+            'y': 'data'
           },
           'series3': {
             'name': 'Series 3',
             'x': 'position',
-            'y': 'data',
-            'color': 'blue'
+            'y': 'data'
           }
         }
       },
@@ -253,7 +250,7 @@
           {
             'for': 'y',
             'type': 'max',
-            'value': 82
+            'value': 100
           }, {
             'for': 'y',
             'type': 'min',
@@ -267,8 +264,8 @@
         inputType: 'code:JSON',
         defaultValue: {
           'max': {
-            'color': 'red',
-            'dashPattern': '5,0',
+            // 'color': 'red',
+            // 'dashPattern': '5,0',
             'title': 'MAX',
             'showThresholdBox': true,
             'displayTitle': true
