--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
     -->
     <link rel="import" href="../px-theme/px-theme-styles.html">
     <style include="px-theme-styles" is="custom-style"></style>
+    <!-- <link rel="import" href="css/px-vis-boxplot-dark-theme-styles.html"> -->
+    <link rel="import" href="css/px-vis-boxplot-light-theme-styles.html">
+
+    <custom-style id="px-vis-boxplot-theme-styles">
+      <style include="px-vis-boxplot-light-theme-styles" is="custom-style"></style>
+    </custom-style>
 
     <!--
       Load dark theme files for later use. Stamp dynamic theme switcher, which
