adding dark theme, removing unwanted css vars

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     -->
     <link rel="import" href="../px-theme/px-theme-styles.html">
     <style include="px-theme-styles" is="custom-style"></style>
-    <!-- <link rel="import" href="css/px-vis-boxplot-dark-theme-styles.html"> -->
+    <link rel="import" href="css/px-vis-boxplot-dark-theme-styles.html">
     <link rel="import" href="css/px-vis-boxplot-light-theme-styles.html">
 
     <custom-style id="px-vis-boxplot-theme-styles">
